--- a/class-notebooks/Feb-4-Conditional-Probability.ipynb
+++ b/class-notebooks/Feb-4-Conditional-Probability.ipynb
@@ -1548,9 +1548,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>Person 1</th>\n",
+       "      <th>Person 2</th>\n",
+       "      <th>Person 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Monday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     weekday  Person 1  Person 2  Person 3\n",
+       "0     Monday        12        10         8\n",
+       "1    Tuesday         6         6         5\n",
+       "2  Wednesday         5        11         7\n",
+       "3   Thursday         8         5         3\n",
+       "4     Friday        11         8         7\n",
+       "5   Saturday         6         9        11\n",
+       "6     Sunday         4        12        15"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "data = {'weekday': [\"Monday\", \"Tuesday\", \"Wednesday\", \n",
@@ -1562,6 +1659,211 @@
     "        'Person 1', 'Person 2', 'Person 3'])\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>Person</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Person 1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Person 1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Person 1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Person 1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>Person 1</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>Person 1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Person 1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Person 2</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Person 2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Person 2</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Person 2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>Person 2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>Person 2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Person 2</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Person 3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Person 3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Person 3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Person 3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>Person 3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>Person 3</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Person 3</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      weekday    Person  Score\n",
+       "0      Monday  Person 1     12\n",
+       "1     Tuesday  Person 1      6\n",
+       "2   Wednesday  Person 1      5\n",
+       "3    Thursday  Person 1      8\n",
+       "4      Friday  Person 1     11\n",
+       "5    Saturday  Person 1      6\n",
+       "6      Sunday  Person 1      4\n",
+       "7      Monday  Person 2     10\n",
+       "8     Tuesday  Person 2      6\n",
+       "9   Wednesday  Person 2     11\n",
+       "10   Thursday  Person 2      5\n",
+       "11     Friday  Person 2      8\n",
+       "12   Saturday  Person 2      9\n",
+       "13     Sunday  Person 2     12\n",
+       "14     Monday  Person 3      8\n",
+       "15    Tuesday  Person 3      5\n",
+       "16  Wednesday  Person 3      7\n",
+       "17   Thursday  Person 3      3\n",
+       "18     Friday  Person 3      7\n",
+       "19   Saturday  Person 3     11\n",
+       "20     Sunday  Person 3     15"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reshape pandas dataframe with melt\n",
+    "melted = pd.melt(df, id_vars = ['weekday'], var_name = \"Person\", value_name = \"Score\")\n",
+    "melted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
