Initial organization with markdown - started NPS search

--- a/class-notebooks/Feb-11-stastics-conditional-probability.ipynb
+++ b/class-notebooks/Feb-11-stastics-conditional-probability.ipynb
@@ -696,23 +696,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def c(p1,p2,c1,c2):\n",
     "    ndf = df[df[p1] == c1][p2]\n",
     "    s = ndf.unique()\n",
     "    psize = len(ndf)\n",
     "    pr = {}\n",
     "    for i in s:\n",
-    "        pr[i] = len(df[(df[p1]==c1)&(dr[p2]==i)])/psize\n",
-    "    return pr\n",
-    "\n",
-    "\n",
-    "def c(p1,p2,c1,c2):\n",
-    "    ndf = df[df[p1] == c1]"
+    "        pr[i] = len(df[(df[p1] == c1) & (dr[p2]==i)])/psize\n",
+    "        \n",
+    "    return pr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
