Magic Type Mapper

--- a/NPS/MS-Summer-Acadmey-2017.ipynb
+++ b/NPS/MS-Summer-Acadmey-2017.ipynb
@@ -1384,21 +1384,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_unique_values_by_column(col_name):\n",
-    "    unique_values = set()\n",
-    "    for df in data:\n",
-    "        if col_name in df.columns:\n",
-    "            df_vals = df[col_name].unique().tolist()\n",
-    "            unique_values.update(df_vals)\n",
-    "    return unique_values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
    "outputs": [
@@ -1426,28 +1411,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timestamp :  [<class 'str'>, <class 'float'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_types = set()\n",
+    "\n",
+    "for item in check_unique_values_by_column(col_name_list[0]):\n",
+    "    unique_types.update([type(item)])\n",
+    "    \n",
+    "# unique_types\n",
+    "print(col_name_list[0], \": \", list(unique_types))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checks all unique datatypes across every feature across every dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_dict = dict()\n",
+    "\n",
+    "for feature in range(len(col_name_list)):\n",
+    "    unique_types = set()\n",
+    "    \n",
+    "    for item in check_unique_values_by_column(col_name_list[feature]):\n",
+    "        unique_types.update([type(item)])\n",
+    "    \n",
+    "    type_dict[col_name_list[feature]] = list(unique_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{float, str}"
+       "{'Timestamp': [str, float],\n",
+       " 'How would you rate your overall satisfaction with the Summer Academy this week?': [int],\n",
+       " 'How well is the schedule paced?': [str, int],\n",
+       " 'Week': [int],\n",
+       " 'Location': [str],\n",
+       " 'How well are the tutorials paced?': [int],\n",
+       " 'What track are you in?': [str],\n",
+       " 'Unnamed: 0': [str]}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Should put in a function\n",
-    "unique_types = set()\n",
-    "\n",
-    "for item in (col_name_list[0]):\n",
-    "    unique_types.update([type(item)])\n",
+    "type_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_unique_values_by_column(col_name):\n",
+    "    unique_values = set()\n",
+    "    for df in data:\n",
+    "        if col_name in df.columns:\n",
+    "            df_vals = df[col_name].unique().tolist()\n",
+    "            unique_values.update(df_vals)\n",
+    "    return unique_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-124-2d096d7212f4>, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-124-2d096d7212f4>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    for item in [check_unique_values_by_column(column) for column in list_of_columns]\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dict_of_unique_types(data):\n",
     "    \n",
-    "unique_types"
+    "    # Instantiate final dictionary containing key-value pairs of columns and associated unique types\n",
+    "    type_dict = dict()\n",
+    "#     column_name_set = set()\n",
+    "\n",
+    "    # Iterates across all dataframes\n",
+    "    for df in data:\n",
+    "        unique_types = set()\n",
+    "        \n",
+    "        # Check each column/feature in dataframe\n",
+    "        for column in df:\n",
+    "            \n",
+    "            # Check if column/feature name is NOT key in final dictionary and if so, create key associated with None\n",
+    "            if column not in type_dict:\n",
+    "                type_dict[column] = None\n",
+    "                \n",
+    "    \n",
+    " \n",
+    "            for item in [check_unique_values_by_column(column_name) for column_name in list_of_columns]:\n",
+    "                type_dict[column] = unique_types.update([type(item)])\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "    unique_types"
    ]
   },
   {
@@ -1470,6 +1560,118 @@
     "# 'What track are you in?' looks pretty clean\n",
     "unique_track_vals = check_unique_values_by_column('What track are you in?')\n",
     "unique_track_vals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Magic Type Mapper!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:11: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    }
+   ],
+   "source": [
+    "johnny = pd.DataFrame(data=[\"asdf\", \"zxcv\", \"qwer\", \"pou\", \"ncmv\", True], columns=[\"chen\"])\n",
+    "\n",
+    "# mapper = {  }\n",
+    "\n",
+    "# johnny[\"chen\"].map(mapper)\n",
+    "\n",
+    "for index, item in johnny.iterrows():\n",
+    "    changer = None\n",
+    "    if type(item[0]) == bool:\n",
+    "        changer = np.nan\n",
+    "        johnny.set_value(index, \"chen\", changer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>asdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>zxcv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>qwer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>pou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ncmv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   chen\n",
+       "0  asdf\n",
+       "1  zxcv\n",
+       "2  qwer\n",
+       "3   pou\n",
+       "4  ncmv\n",
+       "5   NaN"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "johnny"
    ]
   },
   {
@@ -2305,7 +2507,12 @@
     "unique_timestamp_vals = check_unique_values_by_column('Timestamp')\n",
     "unique_timestamp_vals\n",
     "\n",
-    "for "
+    "for df in data:\n",
+    "    if 'Timestamp' in df.columns:\n",
+    "        #Potentially map all strings to pandas.Timestamps, might need regex\n",
+    "        #map non-strings to empty strings\n",
+    "    \n",
+    "    "
    ]
   },
   {
