functionalized dict_of_unique_types

--- a/NPS/MS-Summer-Acadmey-2017.ipynb
+++ b/NPS/MS-Summer-Acadmey-2017.ipynb
@@ -1441,23 +1441,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_dict = dict()\n",
-    "\n",
-    "for feature in range(len(col_name_list)):\n",
-    "    unique_types = set()\n",
-    "    \n",
-    "    for item in check_unique_values_by_column(col_name_list[feature]):\n",
-    "        unique_types.update([type(item)])\n",
-    "    \n",
-    "    type_dict[col_name_list[feature]] = list(unique_types)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 133,
    "metadata": {},
    "outputs": [
@@ -1513,31 +1496,17 @@
     }
    ],
    "source": [
-    "def dict_of_unique_types(data):\n",
-    "    \n",
-    "    # Instantiate final dictionary containing key-value pairs of columns and associated unique types\n",
+    "def dict_of_unique_types():\n",
     "    type_dict = dict()\n",
-    "#     column_name_set = set()\n",
     "\n",
-    "    # Iterates across all dataframes\n",
-    "    for df in data:\n",
+    "    for feature in range(len(col_name_list)):\n",
     "        unique_types = set()\n",
-    "        \n",
-    "        # Check each column/feature in dataframe\n",
-    "        for column in df:\n",
-    "            \n",
-    "            # Check if column/feature name is NOT key in final dictionary and if so, create key associated with None\n",
-    "            if column not in type_dict:\n",
-    "                type_dict[column] = None\n",
-    "                \n",
-    "    \n",
-    " \n",
-    "            for item in [check_unique_values_by_column(column_name) for column_name in list_of_columns]:\n",
-    "                type_dict[column] = unique_types.update([type(item)])\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "    unique_types"
+    "\n",
+    "        for item in check_unique_values_by_column(col_name_list[feature]):\n",
+    "            unique_types.update([type(item)])\n",
+    "\n",
+    "        type_dict[col_name_list[feature]] = list(unique_types)\n",
+    "        \n"
    ]
   },
   {
