Type Mapper using map_types_to_value

--- a/NPS/MS-Summer-Acadmey-2017.ipynb
+++ b/NPS/MS-Summer-Acadmey-2017.ipynb
@@ -1483,20 +1483,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-124-2d096d7212f4>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-124-2d096d7212f4>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    for item in [check_unique_values_by_column(column) for column in list_of_columns]\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Timestamp': [str, float],\n",
+       " 'How would you rate your overall satisfaction with the Summer Academy this week?': [int],\n",
+       " 'How well is the schedule paced?': [str, int],\n",
+       " 'Week': [int],\n",
+       " 'Location': [str],\n",
+       " 'How well are the tutorials paced?': [int],\n",
+       " 'What track are you in?': [str],\n",
+       " 'Unnamed: 0': [str]}"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def dict_of_unique_types():\n",
+    "    \n",
+    "    '''Returns a dict (KEY: Unique Columns in all dataframes, VALUE: Set of unique value types)'''\n",
     "    type_dict = dict()\n",
     "\n",
     "    for feature in range(len(col_name_list)):\n",
@@ -1506,7 +1517,8 @@
     "            unique_types.update([type(item)])\n",
     "\n",
     "        type_dict[col_name_list[feature]] = list(unique_types)\n",
-    "        \n"
+    "        \n",
+    "type_dict"
    ]
   },
   {
@@ -1535,40 +1547,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Magic Type Mapper!"
+    "## Example Magic Type Mapper!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_types_to_value(df, column_name, type_to_change, change_to_value):\n",
+    "    '''Takes a Pandas Dataframe, column name, object type to change, and the value to replace with\n",
+    "        Returns a \"mapped\" dataframe based on value types that you want to replace'''\n",
+    "    for index, item in df.iterrows():\n",
+    "        changer = None\n",
+    "        if type(item[0]) == type_to_change:\n",
+    "            changer = change_to_value\n",
+    "            return df.set_value(index, column_name, changer)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:11: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n"
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:7: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n",
+      "  import sys\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>asdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>zxcv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>qwer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>pou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ncmv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>WORKING</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      chen\n",
+       "0     asdf\n",
+       "1     zxcv\n",
+       "2     qwer\n",
+       "3      pou\n",
+       "4     ncmv\n",
+       "5  WORKING"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "johnny = pd.DataFrame(data=[\"asdf\", \"zxcv\", \"qwer\", \"pou\", \"ncmv\", True], columns=[\"chen\"])\n",
     "\n",
-    "# mapper = {  }\n",
+    "mapped = map_types_to_value(johnny, \"chen\", bool, \"WORKING\")\n",
     "\n",
-    "# johnny[\"chen\"].map(mapper)\n",
+    "mapped\n",
     "\n",
-    "for index, item in johnny.iterrows():\n",
-    "    changer = None\n",
-    "    if type(item[0]) == bool:\n",
-    "        changer = np.nan\n",
-    "        johnny.set_value(index, \"chen\", changer)"
+    "# for index, item in johnny.iterrows():\n",
+    "#     changer = None\n",
+    "#     if type(item[0]) == bool:\n",
+    "#         changer = np.nan\n",
+    "#         johnny.set_value(index, \"chen\", changer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1634,13 +1729,30 @@
        "5   NaN"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "johnny"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_types_to_value(df, column_name, type_to_change, change_to_value):\n",
+    "    '''Takes a Pandas Dataframe and type object to return a \"mapped\" dataframe based on value types'''\n",
+    "    for index, item in df.iterrows():\n",
+    "        changer = None\n",
+    "        if type(item[0]) == typeof:\n",
+    "            changer = change_to_value\n",
+    "            df.set_value(index, column_name, changer)\n",
+    "            \n",
+    "            \n"
    ]
   },
   {
