EDIT to final project folder setup

--- a/class-notebooks/Feb-27-Confidence-Intervals-Outliers.ipynb
+++ b/class-notebooks/Feb-27-Confidence-Intervals-Outliers.ipynb
@@ -230,7 +230,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def corrplot_(df=None, mask_type=\"numerical\", figsize=(14, 14), fontsize=8, cpalette=(10, 220)):\n",
+    "    \"\"\" Global function that produces customized correlation plot reducing redundancy. \"\"\"    \n",
+    "    if df is None:\n",
+    "        raise ReferenceError(\"\\nDataFrame not found.\")\n",
+    "    corr_data = df.corr()\n",
+    "\n",
+    "    # Creates whitespace mask over upper right triangle section for repeated features\n",
+    "    upper_triangle_mask = np.zeros_like(corr_data, dtype=np.bool)\n",
+    "    upper_triangle_mask[np.triu_indices_from(upper_triangle_mask)] = True\n",
+    "    \n",
+    "    # Generates MatPlotLib subplot objects\n",
+    "    fig, ax = plt.subplots(figsize=figsize)\n",
+    "    \n",
+    "    # Calculates relative maximum from correlational data\n",
+    "    vmax = np.abs(corr_data.values[~upper_triangle_mask]).max()\n",
+    "    \n",
+    "    # Creates correlational heatmap with simple color intensity relative to distribution\n",
+    "    cmap = sns.diverging_palette(cpalette[0], cpalette[1], as_cmap=True)\n",
+    "    sns.heatmap(corr_data, mask=upper_triangle_mask, cmap=cmap, vmin=-vmax, vmax=vmax, square=True, linecolor=\"lightgray\", linewidths=1, ax=ax)\n",
+    "    \n",
+    "    # Overlays feature names and corr. data values over whitespace mask\n",
+    "    for iterator in range(len(corr_data)):\n",
+    "        ax.text(iterator+0.5, iterator+0.5, corr_data.columns[iterator], ha=\"center\", va=\"center\", rotation=45)\n",
+    "        \n",
+    "        for jterator in range(iterator+1, len(corr_data)):\n",
+    "            value = \"{:.3f}\".format(corr_data.values[iterator, jterator])\n",
+    "            \n",
+    "            # Switch-case for numerical whitespace mask\n",
+    "            if mask_type == \"numerical\":\n",
+    "                ax.text(jterator+0.5, (iterator+0.5), value, ha=\"center\", va=\"center\")\n",
+    "                \n",
+    "            # Switch-case for categorical whitespace mask\n",
+    "            if mask_type == \"categorical\":\n",
+    "                ax.text(jterator+0.5, (iterator+0.5), _value_to_category(value), ha=\"center\", va=\"center\", fontsize=fontsize)\n",
+    "    ax.axis(\"off\")"
+   ]
   }
  ],
  "metadata": {
