--- a/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
+++ b/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
@@ -18,11 +18,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## To have from rubric\n",
+    "* Correctly identifies problem as data analysis problem with interesting motivation and state why chose this project\n",
+    "* Did show statistics about dataset and report outliers in the dataset with box-plot (IQR) visualization\n",
+    "* Compared classes/groups in terms of mean, variance\n",
+    "* Thorough analysis and interpretation of results including discussion of trade-offs (e.g., inductive bias of model choice, limitations of dataset, etc)\n",
+    "* Written or presented to communicate results to non-technical audience ",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem Identification\n",
+    "\n",
+    "Students across the country are subject to taking standardize tests for a variety of reasons, wheter its mandated by the state they live in or for college admissions. Regardless of the situation, students are put under stress to perform well on these tests and there are a variety of factors that play into wheter they do or not. In this EDA we track the scores achieved by 1000 students in math, reading, and writing sections of a standardized test, in addition to some categorical data about the students such as t"
+   ]
   },
   {
    "cell_type": "code",
@@ -56,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -90,6 +107,8 @@
        "      <th>math score</th>\n",
        "      <th>reading score</th>\n",
        "      <th>writing score</th>\n",
+       "      <th>score average</th>\n",
+       "      <th>pass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -103,6 +122,8 @@
        "      <td>72</td>\n",
        "      <td>72</td>\n",
        "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -114,6 +135,8 @@
        "      <td>69</td>\n",
        "      <td>90</td>\n",
        "      <td>88</td>\n",
+       "      <td>82</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -125,6 +148,8 @@
        "      <td>90</td>\n",
        "      <td>95</td>\n",
        "      <td>93</td>\n",
+       "      <td>92</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -136,6 +161,8 @@
        "      <td>47</td>\n",
        "      <td>57</td>\n",
        "      <td>44</td>\n",
+       "      <td>49</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -147,6 +174,8 @@
        "      <td>76</td>\n",
        "      <td>78</td>\n",
        "      <td>75</td>\n",
+       "      <td>76</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,15 +189,22 @@
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
        "\n",
-       "  test preparation course  math score  reading score  writing score  \n",
-       "0                    none          72             72             74  \n",
-       "1               completed          69             90             88  \n",
-       "2                    none          90             95             93  \n",
-       "3                    none          47             57             44  \n",
-       "4                    none          76             78             75  "
+       "  test preparation course  math score  reading score  writing score  \\\n",
+       "0                    none          72             72             74   \n",
+       "1               completed          69             90             88   \n",
+       "2                    none          90             95             93   \n",
+       "3                    none          47             57             44   \n",
+       "4                    none          76             78             75   \n",
+       "\n",
+       "   score average   pass  \n",
+       "0             72   True  \n",
+       "1             82   True  \n",
+       "2             92   True  \n",
+       "3             49  False  \n",
+       "4             76   True  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
