Problem identification explainations and spelling

--- a/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
+++ b/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "# Problem Identification\n",
     "\n",
-    "Students across the country are subject to taking standardize tests for a variety of reasons, wheter its mandated by the state they live in or for college admissions. Regardless of the situation, students are put under stress to perform well on these tests and there are a variety of factors that play into wheter they do or not. In this EDA we track the scores achieved by 1000 students in math, reading, and writing sections of a standardized test, in addition to some categorical data about the students such as t"
+    "Students across the country are subject to taking standardize tests for a variety of reasons, wheter its mandated by the state they live in or for college admissions. Regardless of the situation, students are put under stress to perform well on these tests and there are a variety of factors that play into wheter they do or not. In this EDA we track the scores achieved by 1000 students in math, reading, and writing sections of a standardized test, in addition to some categorical data about the students. I will seek to identify if there is any correlation between these categories and the scores achieved by the students. By knowing this information, we may be able to accurately identify practices or traits that lead to achieving better test scores on standardized tests. "
    ]
   },
   {
